--- a/processor/package.json
+++ b/processor/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "hooks",
+  "name": "processor",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js", 
+  "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --respawn src/index.ts", 
+    "start": "ts-node-dev --respawn src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.10.1",
-    "@types/express": "^5.0.3",
-    "express": "^5.1.0",
+    "kafkajs": "^2.2.4"
+  },
+  "devDependencies": {
     "prisma": "^6.10.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   }
 }
